# BigEarthNet-Models

./: .gitignore  README.md  install_dataset.md  main.py  pyproject.toml  readme.md
bigearthnet/explore/: explore.ipynb  explore_metrics.ipynb  figureout.ipynb  main.py
bigearthnet/explore/src/config/: config.yaml
bigearthnet/explore/src/data/: loader.py
bigearthnet/explore/src/metrics/: metrics.py
bigearthnet/explore/src/model_zoo/: classification.py  models.py
bigearthnet/explore/src/utils/: torch.py  utils.py  wandb_logger.py
